--- a/package.json
+++ b/package.json
@@ -53,13 +53,14 @@
     "gulp-util": "^3.0.7",
     "gulp-xo": "^0.14.0",
     "imports-loader": "^0.7.0",
+    "jstransformer-nunjucks": "^0.3.0",
     "md5": "^2.2.1",
     "metalsmith": "2.3.0",
     "metalsmith-collections": "^0.9.0",
     "metalsmith-define": "2.0.1",
     "metalsmith-hyphenate": "^0.4.1",
     "metalsmith-ignore": "^0.1.2",
-    "metalsmith-in-place": "1.4.4",
+    "metalsmith-in-place": "^2.0.1",
     "metalsmith-markdownit": "^0.4.0",
     "metalsmith-permalinks": "0.5.0",
     "nunjucks": "^3.0.0",
