--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   "license": "CC0 1.0 Universal",
   "homepage": "https://alarisprime.com",
   "dependencies": {
-    "autoprefixer": "^6.7.3",
-    "babel-core": "^6.23.1",
+    "autoprefixer": "^6.7.7",
+    "babel-core": "^6.24.0",
     "babel-loader": "6.4.1",
     "babel-preset-es2015": "6.24.0",
     "babel-preset-stage-0": "6.22.0",
     "bourbon": "4.3.3",
-    "bourbon-neat": "1.8.0",
+    "bourbon-neat": "2.0.0",
     "browser-sync": "^2.18.8",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
@@ -37,7 +37,7 @@
     "gulp-if": "^2.0.2",
     "gulp-load-plugins": "^1.5.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^6.3.0",
+    "gulp-postcss": "^6.4.0",
     "gulp-print": "^2.0.1",
     "gulp-rev": "^7.1.2",
     "gulp-rev-replace": "^0.4.3",
@@ -47,11 +47,11 @@
     "gulp-sitemap": "^4.2.0",
     "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.4.1",
-    "gulp-uglify": "^2.1.1",
+    "gulp-uglify": "^2.1.2",
     "gulp-useref": "^3.1.2",
     "gulp-util": "^3.0.8",
     "gulp-xo": "^0.15.0",
-    "imports-loader": "^0.7.0",
+    "imports-loader": "^0.7.1",
     "jstransformer-nunjucks": "^0.3.0",
     "md5": "^2.2.1",
     "metalsmith": "2.3.0",
@@ -63,11 +63,11 @@
     "metalsmith-markdownit": "^0.4.0",
     "metalsmith-permalinks": "0.5.0",
     "run-sequence": "^1.2.2",
-    "sanitize.css": "git+https://github.com/ciju/sanitize.css.git",
+    "sanitize.css": "5.0.0",
     "through2": "^2.0.3",
     "turbolinks": "^5.0.0",
     "webfontloader": "1.6.27",
-    "webpack": "^2.3.0"
+    "webpack": "^2.3.2"
   },
   "devDependencies": {
     "gulp-insert": "^0.5.0",
