--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "CC0 1.0 Universal",
   "homepage": "https://alarisprime.com",
   "dependencies": {
+    "accoutrement-color": "^2.1.0",
     "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.0",
     "babel-loader": "6.4.1",
