--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -13,7 +13,7 @@ rules:
   # Mixins
   mixins-before-declarations:
     - 2
-    - exclude: ['breakpoint', 'bp']
+    - exclude: ['breakpoint', 'bp', 'grid-media']
 
   # Line Spacing
   one-declaration-per-line: 2
